Fixed alignment and image
Fixed alignment for About Me div and profile picture link.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,3 +23,20 @@ body {
 .panel-body {
 	text-align: center;
 }
+
+.container .profilebody {
+	display: inline-block;
+	
+}
+
+.profilepicture {
+	display: inline-block;
+	width: 20%;
+	float: left;
+}
+
+.bio {
+	display: inline-block;
+	width: 80%;
+	float: right;
+}
